# lumei

./: .gitignore  README.md  lumei.py  pip-publish.sh  pyproject.toml  requirements.txt  setup.py
amber/: amber.py
amber/ai/openai/: agent.py  file_search.py  query.py
amber/utils/: file_manager.py
lumei/: __init__.py  __main__.py  attribute_processor.py  cli.py  command_processor.py  file_manager.py  lumei.py  main.py  query_executor.py  query_param.py
lumei/ai/: __init__.py
lumei/ai/openai/: file_search.py  query.py
lumei/openai/: __init__.py  agent.py  file_search.py  query.py  standalone_file_search.py
lumei/utils/: query.py
meimei/: meimei.py
meimei/ai/openai/: file_search.py  query.py
scripts/: cleanup.sh  install.sh  pip-publish.sh  publish.sh  uninstall.sh
