[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumei"
version = "0.3.0"
description = "File search tool using OpenAI assistant."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "David Zhang", email = "dev@hansololz.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai==1.42.0",
    "pandas==2.2.2",
    "absl-py==2.1.0",
    "openpyxl==3.1.5",
    "prettytable==3.11.0"
]

[project.scripts]
lumei = "lumei.cli:main"